Bug 159089 - bookmarksopenlevel not handled right
Summary: bookmarksopenlevel not handled right
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-10 21:06 UTC by Majin Sniper
Modified: 2008-03-10 21:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
TeX Sourcefile (811 bytes, text/plain)
2008-03-10 21:07 UTC, Majin Sniper
Details
Compilled PDF File (5.74 KB, application/pdf)
2008-03-10 21:08 UTC, Majin Sniper
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Majin Sniper 2008-03-10 21:06:33 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.1.2 from Gentoo eBuild
OS:                Linux

Okular doesn't handle the bookmarksopenlevel right, that is set in PDF Files (the is, what the hyperref package in latex calls it, I don't know how it's called in the pdf standards). It is reproducable via the latex/pdf files that are appended below.

If bookmarksopenlevel is set to 1 as in the file, Okular seems to expand all bookmark levels above 1. This can be seen, when opening levels 0 and 1, the others will open automatically then.

It should expand all up to level 1, which is only level 0 in this example. acroread and kpdf from KDE 3.5.9 both handle it the right way.
Comment 1 Majin Sniper 2008-03-10 21:07:22 UTC
Created attachment 23852 [details]
TeX Sourcefile
Comment 2 Majin Sniper 2008-03-10 21:08:53 UTC
Created attachment 23853 [details]
Compilled PDF File
Comment 3 Majin Sniper 2008-03-10 21:13:25 UTC
Sorry, it should expand all bookmark levels up to and including 1, so levels 0 and 1 in this example.
Comment 4 Pino Toscano 2008-03-10 21:22:23 UTC
SVN commit 784175 by pino:

One typo^W character to rule 'em all.
(aka: correctly respect the open state of the TOC branches.)

BUG: 159089


 M  +1 -1      tocmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=784175
Comment 5 Pino Toscano 2008-03-10 21:22:29 UTC
SVN commit 784176 by pino:

Backport: correctly respect the open state of the TOC branches.

CCBUG: 159089


 M  +1 -1      tocmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=784176