One typo^W character to rule 'em all. (aka: correctly respect the open state of the TOC branches.)

BUG: 159089

svn path=/trunk/KDE/kdegraphics/okular/; revision=784175